--- a/UI/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/UI/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Access denied";
 }
 
-<header>
-    <h1 class="text-danger">@ViewData["Title"]</h1>
-    <p class="text-danger">You do not have access to this resource.</p>
+<header class="py-5 text-center">
+    <h1 class="text-danger pt-5">@ViewData["Title"]</h1>
+    <p class="text-danger pb-5">You do not have access to this resource.</p>
 </header>
