--- a/UI/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/UI/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -9,21 +9,36 @@
     }
 }
 
-<h2 class="mt-5 mb-2 text-center">Manage your account</h2>
+@{
+    // Assuming this view structure is part of a layout or container view
+}
 
-<div>
-    
-    <hr />
-    <div class="container mt-5 mb-5">
-    <div class="row">
-        <div class="col-md-3">
-            <partial name="_ManageNav" />
-        </div>
-        <div class="col-md-9">
-            @RenderBody()
+<div class="container py-5">
+
+    <div class="row mb-4">
+        <div class="col-12 text-center">
+            <h1 class="display-5 fw-bold text-primary">
+                <i class="bi bi-person-circle me-2"></i> Manage Your Account
+            </h1>
+            <hr class="w-50 mx-auto" />
         </div>
     </div>
-   
+
+    <div class="row justify-content-center">
+        <div class="col-12">
+            <div class="card shadow-lg p-3">
+                <div class="row">
+
+                    <div class="col-md-3 border-end">
+                        <partial name="_ManageNav" />
+                    </div>
+
+                    <div class="col-md-9 pt-3">
+                        @RenderBody()
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
