--- a/UI/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/UI/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,16 +1,30 @@
 ﻿@using DAL.Entities
-@inject SignInManager<AppIdentityUser> SignInManager
-@{
-    var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
-}
-<ul class="nav nav-pills flex-column">
-    <li class="nav-item"><a class="nav-link @ManageNavPages.IndexNavClass(ViewContext)" id="profile" asp-page="./Index">Profile info</a></li>
-    <li class="nav-item"><a class="nav-link @ManageNavPages.EmailNavClass(ViewContext)" id="email" asp-page="./Email">Email</a></li>
-    <li class="nav-item"><a class="nav-link @ManageNavPages.ChangePasswordNavClass(ViewContext)" id="change-password" asp-page="./ChangePassword">Password</a></li>
-@*     @if (hasExternalLogins)
-    {
-        <li id="external-logins" class="nav-item"><a id="external-login" class="nav-link @ManageNavPages.ExternalLoginsNavClass(ViewContext)" asp-page="./ExternalLogins">External logins</a></li>
-    } *@
-   @*  <li class="nav-item"><a class="nav-link @ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)" id="two-factor" asp-page="./TwoFactorAuthentication">Two-factor authentication</a></li> *@
-    @* <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Personal data</a></li> *@
+
+
+
+<ul class="nav nav-pills flex-column mt-3 mb-4">
+
+    <li class="nav-item mb-1">
+        <a class="nav-link @ManageNavPages.IndexNavClass(ViewContext)" id="profile" asp-page="./Index">
+            <i class="bi bi-person-vcard me-2"></i> Profile Info
+        </a>
+    </li>
+
+    <li class="nav-item mb-1">
+        <a class="nav-link @ManageNavPages.EmailNavClass(ViewContext)" id="email" asp-page="./Email">
+            <i class="bi bi-envelope me-2"></i> Email
+        </a>
+    </li>
+
+    <li class="nav-item mb-1">
+        <a class="nav-link @ManageNavPages.ChangePasswordNavClass(ViewContext)" id="change-password" asp-page="./ChangePassword">
+            <i class="bi bi-lock me-2"></i> Password
+        </a>
+    </li>
+
+    <li class="nav-item mb-1">
+        <a class="nav-link @ManageNavPages.OrdersNavClass(ViewContext)" id="Orders" asp-page="./Orders">
+            <i class="bi bi-cart me-2"></i> Your Orders
+        </a>
+    </li>
 </ul>
