--- a/UI/Views/Admin/ProductIndex.cshtml
+++ b/UI/Views/Admin/ProductIndex.cshtml
@@ -5,62 +5,85 @@
     ViewData["Title"] = "Products";
 }
 
-<h1>Index</h1>
 
-<p>
-    <a asp-action="CreateProduct">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Stock)
-            </th>
-            <th>
-                Image
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AddedByUser)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Category)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Stock)
-            </td>
-            <td>
-                <img src="~/@item.ImageUrl" style="width:200px" />
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AddedByUser)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Category)
-            </td>
-            <td>
-                <a asp-action="EditProduct" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="ProductDetails" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="DeleteProduct" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="container py-4">
+
+    <div class="d-flex justify-content-between align-items-center mb-4 border-bottom pb-2">
+        <h1 class="display-4 fw-bold text-dark">Product Index</h1>
+        <p class="mb-0">
+            <a asp-action="CreateProduct" class="btn btn-primary btn-lg shadow-sm">
+                <i class="bi bi-plus-circle-fill me-1"></i> Create New
+            </a>
+        </p>
+    </div>
+
+    <div class="table-responsive shadow-sm rounded">
+        <table class="table table-striped table-hover table-bordered caption-top">
+       
+
+            <thead class="table-dark">
+                <tr>
+                    <th scope="col" class="text-start">
+                        @Html.DisplayNameFor(model => model.Name)
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.Price)
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.Stock)
+                    </th>
+                    <th scope="col">
+                        Image
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.AddedByUser)
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.Category)
+                    </th>
+                    <th scope="col">Actions</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td class="text-start fw-bold">
+                            @Html.DisplayFor(modelItem => item.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Price)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Stock)
+                        </td>
+                        <td>
+                            <img src="~/@item.ImageUrl" class="img-fluid rounded" style="max-width:100px; height:auto;" alt="Product Image" />
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.AddedByUser)
+                        </td>
+                        <td>
+                            <span class="badge bg-info text-dark">@Html.DisplayFor(modelItem => item.Category)</span>
+                        </td>
+                        <td>
+                            <div class="btn-group btn-group-sm" role="group">
+                                <a asp-action="EditProduct" asp-route-id="@item.Id" class="btn btn-warning">
+                                    <i class="bi bi-pencil"></i> Edit
+                                </a>
+                                <a asp-action="ProductDetails" asp-route-id="@item.Id" class="btn btn-info text-white">
+                                    <i class="bi bi-info-circle"></i> Details
+                                </a>
+                                <a asp-action="DeleteProduct" asp-route-id="@item.Id" class="btn btn-danger">
+                                    <i class="bi bi-trash"></i> Delete
+                                </a>
+                            </div>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
+
