--- a/UI/Views/Order/Success.cshtml
+++ b/UI/Views/Order/Success.cshtml
@@ -10,6 +10,6 @@
     <h2 class="text-success">Payment is Successfull</h2>
     <h3 class="text-success">Your Order is created</h3>
 
-    <p>Total Amount Paid = $@ViewData["AmountPaid"]</p>
+    <p class="fs-4 fw-bold">Total Amount Paid = $@ViewData["AmountPaid"]</p>
 
 </div>
