--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -17,10 +17,11 @@
     <title>@ViewData["Title"] - MyShop</title>
     <script type="importmap"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-
     <link rel="stylesheet" href="~/css/style.css" asp-append-version="true">
     <link rel="stylesheet" href="~/css/responsive.css" asp-append-version="true">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    @await RenderSectionAsync("Styles", required: false)
+
 </head>
 <body d-flex flex-column min-vh-100>
 
@@ -44,22 +45,21 @@
                     @if (User.IsInRole("Admin"))
                     {
                         <li class="nav-item">
-                            <a class="nav-link" href="@Url.Action("Index", "Admin")">Admin Panel</a>
+                            <a class="nav-link" href="@Url.Action("Index", "Admin")">Admin DashBoard</a>
                         </li>
 
                     }
 
-                        @* <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
-                                Categories
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="@Url.Action("Index", "Products", new { category = "electronics" })">Electronics</a></li>
-                                <li><a class="dropdown-item" href="@Url.Action("Index", "Products", new { category = "clothing" })">Clothing</a></li>
-                                <li><a class="dropdown-item" href="@Url.Action("Index", "Products", new { category = "home" })">Home & Kitchen</a></li>
-                                <li><a class="dropdown-item" href="@Url.Action("Index", "Products", new { category = "books" })">Books</a></li>
-                            </ul>
-                        </li> *@
+
+                    @if (User.IsInRole("Buyer"))
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link" href="@Url.Action("Index", "Buyer")">Buyer DashBoard</a>
+                        </li>
+
+                    }
+
+
                     </ul>
                     <div class="d-flex">
              
